--- a/iMac-Home/squirrel.custom.yaml
+++ b/iMac-Home/squirrel.custom.yaml
@@ -1,8 +1,32 @@
 patch:
   show_notifications_when: appropriate          # 状态通知，适当，也可设为全开（always）全关（never）
 
-  style/color_scheme: mritd_dark                # 方案命名，不能有空格
+  style/color_scheme: catalina                # 方案命名，不能有空格
   preset_color_schemes:
+    lovelock:
+      name: catalina
+      author: lovelock
+      horizontal: true                          # 水平排列
+      inline_preedit: true  
+      back_color: 0xFFFFFF
+      border_color: 0x000000
+      text_color: 0x000000
+      hilited_text_color: 0xFFFFFF
+      hilited_back_color: 0xDDDDDD
+      hilited_candidate_text_color: 0xFFFFFF
+      hilited_candidate_back_color: 0xD35A33
+      candidate_text_color: 0x000000
+      comment_text_color: 0xDDDDDD
+      candidate_format: "%c\u2005%@"            # 用 1/6 em 空格 U+2005 来控制编号 %c 和候选词 %@ 前后的空间。
+      corner_radius: 5                          # 候选条圆角
+      hilited_corner_radius: 5                  # 高亮圆角
+      border_height: 6                          # 窗口边界高度，大于圆角半径才生效
+      border_width: 6                           # 窗口边界宽度，大于圆角半径才生效
+      border_color_width: 0
+      # font_face: "PingFangSC"                 # 候选词字体
+      font_point: 16                            # 候选字词大小
+      label_font_point: 12                      # 候选编号大小
+
     mritd_dark:
       name: 漠然／mritd dark
       author: mritd <mritd1234@gmail.com>
@@ -14,7 +38,7 @@ patch:
       border_height: 6                          # 窗口边界高度，大于圆角半径才生效
       border_width: 6                           # 窗口边界宽度，大于圆角半径才生效
       border_color_width: 0
-      #font_face: "PingFangSC"                   # 候选词字体
+      # font_face: "PingFangSC"                   # 候选词字体
       font_point: 16                            # 候选字词大小
       label_font_point: 14                      # 候选编号大小
 
@@ -30,6 +54,3 @@ patch:
       hilited_candidate_label_color: 0xffffff   # 第一候选项编号颜色
       comment_text_color: 0xdedddd              # 拼音等提示文字颜色
       #hilited_comment_text_color: 0xdedddd      # 注解文字高亮
-
-
-  "app_options/com.runningwithcrayons.Alfred-3/ascii_mode": true
