--- a/iMac-Home/squirrel.custom.yaml
+++ b/iMac-Home/squirrel.custom.yaml
@@ -1,10 +1,10 @@
 patch:
   show_notifications_when: appropriate          # 状态通知，适当，也可设为全开（always）全关（never）
 
-  style/color_scheme: catalina                # 方案命名，不能有空格
+  style/color_scheme: catalina-dark             # 方案命名，不能有空格
   preset_color_schemes:
-    catalina:
-      name: catalina
+    catalina-light:
+      name: catalina-light
       author: lovelock
       horizontal: true                          # 水平排列
       inline_preedit: true  
@@ -16,7 +16,7 @@ patch:
       hilited_candidate_text_color: 0xFFFFFF
       hilited_candidate_back_color: 0xD35A33
       candidate_text_color: 0x000000
-      comment_text_color: 0xDDDDDD
+      comment_text_color: 0x000000
       candidate_format: "%c\u2005%@"            # 用 1/6 em 空格 U+2005 来控制编号 %c 和候选词 %@ 前后的空间。
       corner_radius: 5                          # 候选条圆角
       hilited_corner_radius: 5                  # 高亮圆角
@@ -27,6 +27,29 @@ patch:
       font_point: 16                            # 候选字词大小
       label_font_point: 12                      # 候选编号大小
 
+    catalina-dark:
+      name: catalina-dark
+      author: lovelock
+      horizontal: true                          # 水平排列
+      inline_preedit: true  
+      back_color: 0x232326
+      border_color: 0x000000
+      text_color: 0xFFFFFF
+      hilited_text_color: 0xFFFFFF
+      hilited_back_color: 0xDDDDDD
+      hilited_candidate_text_color: 0xFFFFFF
+      hilited_candidate_back_color: 0xD35A33
+      candidate_text_color: 0xFFFFFF
+      comment_text_color: 0x000000
+      candidate_format: "%c\u2005%@"            # 用 1/6 em 空格 U+2005 来控制编号 %c 和候选词 %@ 前后的空间。
+      corner_radius: 5                          # 候选条圆角
+      hilited_corner_radius: 5                  # 高亮圆角
+      border_height: 6                          # 窗口边界高度，大于圆角半径才生效
+      border_width: 6                           # 窗口边界宽度，大于圆角半径才生效
+      border_color_width: 0
+      # font_face: "PingFangSC"                 # 候选词字体
+      font_point: 16                            # 候选字词大小
+      label_font_point: 12                      # 候选编号大小
     mritd_dark:
       name: 漠然／mritd dark
       author: mritd <mritd1234@gmail.com>
